--- a/index.html
+++ b/index.html
@@ -118,6 +118,36 @@
 
         </div>
 
+        <div class="projet">
+            <a href="https://ammar-khaoula.github.io/APIMeteo/">
+                <div class="pictures">
+                    <img src="pictures/arriere_plan.jpg" alt="meteo">
+                </div>
+                <span>API meteo</span>
+                <span class="date_project">01/02/2022</span>
+            </a>
+        </div>
+
+        <div class="projet">
+            <a href="https://ammar-khaoula.github.io/sale-de-sport/">
+                <div class="pictures">
+                    <img src="pictures/2.jpg" alt="salle de sport">
+                </div>
+                <span>salle de sport</span>
+                <span class="date_project">10/02/2022</span>
+            </a>
+        </div>
+
+        <div class="projet">
+            <a href="https://ammar-khaoula.github.io/e-commerce/">
+                <div class="pictures">
+                    <img src="pictures/vetement1.jpg" alt="e-commerce">
+                </div>
+                <span>e-Commerce</span>
+                <span class="date_project">01/03/2022</span>
+            </a>
+        </div>
+
     </div>
 </section>
 <section class="blocSpan" id="contacts">
