--- a/index.html
+++ b/index.html
@@ -1,184 +1,177 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfeliot</title>
+    <title>portfeliot AMMAR KHAOULA</title>
     <link rel='stylesheet' href='style.css'>
+    <link rel="stylesheet" type="text/css" href="ecran_tablette.css" media="all and (min-width:769px) and (max-width:991px)">
+    <link rel="stylesheet" type="text/css" href="petite_ecran.css" media="all and (max-width:768px)">
     <script src="https://kit.fontawesome.com/613a25ab47.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-   <header id="header">
-    <div>
-        <img class="imageProfil" src="pictures/monImage.jpg" alt="image de profil">
-    </div>
-    <div>
-        <h1> Ammar Khaoula</h1>
-    </div>
- 
-  </header>
-  <nav>
-    <div class="nav">
-          <div class="btn btn1">acceuil</div>
-          <div class="btn btn2"><a href="#projects">projets</a></div>
-          <div class="btn btn3"><a href="#contacts">contact</a></div>
-    </div>
-</nav>
-
-<section>
-    <h3>Bienvenue</h3>
-    <p class="presentation" id="paragraphe1">
-        Après mon bac spécialité mathématique en 2011. <br>
-        Je suis entré à l’école infirmière. J’ai mon diplôme en 2014, après je travaille comme bénévole au service d’urgence de 2014 jusqu’à 2017.<br>
-        Suite à un regroupement familial j’arrive aux France ou notre diplôme n’est pas reconnu. <br>En 2019 je déposais mon dossier au parcoursUp et J’entrer à l’école infirmière aux France pour refaire les 3 ans d’études 
-        mais suite à des engagements familiaux privés j’ai arrêté l’école.<br>
-        Comme je suis passionnée par la communication, les nouvelles technologies et par le web.<br>
-        En 2020 J’ai fait une petite formation de 2 mois chez <span>«KONEXIO»</span> pour connaitre la base de HTML/CSS et Javascript.
-        <br>En 2021 j’ai fait Formation de développeuse web chez <span>«OpenClassroom»</span> (RNCP niveau v)...<br>
-    </p>
-    <p class="presentation">
-        Au durent de formation j’ai fait six projets ou j’ai utilisé plusieurs langages informatiques :<br>
-          -HTML5 : structure de page.<br>
-          -CSS3 : mise en forme.<br>
-          -Bootstrap : site responsive.<br>
-          -Javascript : comportement de page.<br>
-          -OWASP : sécuriser l’application. <br>
-          -Git : gestion de versions et déployer le projet.<br>
-          -API rest. <br>
-          -MongoDB/MYSQL : base de données. <br>
-          -Node Js : environnement d’exécution pour Javascript. <br>
-          -Vue Js: est un framework Javascript, utilisé pour la partie front-end...<br>
-
-    </p>
-</section> 
-<!--projet-->
-<section id="projects">
-    <h3>Mes Projets</h3>
-    <div id="mesProjts">
-    
-        <div class="projet">
-            <a href="https://ammar-khaoula.github.io/reservia.githup.io/">
-                <div class="pictures">
-                    <img src="pictures/Avion (2).jpg" alt="Reservia">
-                </div>
-                <span>reservia</span>
-                <span class="date_project">21/03/2021</span>
-            </a>
+    <header id="header">
+        <div>
+            <img class="imageProfil" src="pictures/monImage.jpg" alt="image de profil">
+        </div>
+        <div>
+            <h1> Ammar Khaoula</h1>
         </div>
 
-        <div class="projet">
-            <a href="https://ammar-khaoula.github.io/AmmarKhaoula_3_21032021.githup.io/">
-                <div class="pictures">
-                    <img src="pictures/food.jpg" alt="food">
-                </div>
-                <span>ohmyfood</span>
-                <span class="date_project">26/04/2021</span>
-            </a>
+    </header>
+    <nav>
+        <div class="nav">
+            <div class="btn btn1">acceuil</div>
+            <div class="btn btn2"><a href="#projects">projets</a></div>
+            <div class="btn btn3"><a href="#contacts">contact</a></div>
         </div>
+    </nav>
 
-        <div class="projet">
-            <a href="https://ammar-khaoula.github.io/chouette_entreprise_webdesign_Lyon/">
-                <div class="pictures">
-                    <img src="pictures/seo.png" alt="seo">
-                </div>
-                <span>La chouette agence</span>
-                <span class="date_project">17/05/2021</span>
-            </a>
+    <section>
+        <h3>Bienvenue</h3>
+        <p class="presentation" id="paragraphe1">
+            Après mon bac spécialité mathématique en 2011. <br> Je suis entré à l’école infirmière. J’ai mon diplôme en 2014, après je travaille comme bénévole au service d’urgence de 2014 jusqu’à 2017.<br> Suite à un regroupement familial j’arrive aux
+            France ou notre diplôme n’est pas reconnu. <br>En 2019 je déposais mon dossier au parcoursUp et J’entrer à l’école infirmière aux France pour refaire les 3 ans d’études mais suite à des engagements familiaux privés j’ai arrêté l’école.<br>            Comme je suis passionnée par la communication, les nouvelles technologies et par le web.<br> En 2020 J’ai fait une petite formation de 2 mois chez <span>«KONEXIO»</span> pour connaitre la base de HTML/CSS et Javascript.
+            <br>En 2021 j’ai fait Formation de développeuse web chez <span>«OpenClassroom»</span> (RNCP niveau v)...<br>
+        </p>
+        <p class="presentation">
+            Au durent de formation j’ai fait six projets ou j’ai utilisé plusieurs langages informatiques :<br> -HTML5 : structure de page.<br> -CSS3 : mise en forme.<br> -Bootstrap : site responsive.<br> -Javascript : comportement de page.<br> -OWASP
+            : sécuriser l’application. <br> -Git : gestion de versions et déployer le projet.<br> -API rest. <br> -MongoDB/MYSQL : base de données. <br> -Node Js : environnement d’exécution pour Javascript. <br> -Vue Js: est un framework Javascript, utilisé
+            pour la partie front-end...<br>
+
+        </p>
+    </section>
+    <!--projet-->
+    <section id="projects">
+        <h3>Mes Projets</h3>
+        <div id="mesProjts">
+
+            <div class="projet">
+                <a href="https://ammar-khaoula.github.io/reservia.githup.io/">
+                    <div class="pictures">
+                        <img src="pictures/Avion (2).jpg" alt="Reservia">
+                    </div>
+                    <span>reservia</span>
+                    <span class="date_project">21/03/2021</span>
+                </a>
+            </div>
+
+            <div class="projet">
+                <a href="https://ammar-khaoula.github.io/AmmarKhaoula_3_21032021.githup.io/">
+                    <div class="pictures">
+                        <img src="pictures/food.jpg" alt="food">
+                    </div>
+                    <span>ohmyfood</span>
+                    <span class="date_project">26/04/2021</span>
+                </a>
+            </div>
+
+            <div class="projet">
+                <a href="https://ammar-khaoula.github.io/chouette_entreprise_webdesign_Lyon/">
+                    <div class="pictures">
+                        <img src="pictures/seo.png" alt="seo">
+                    </div>
+                    <span>La chouette agence</span>
+                    <span class="date_project">17/05/2021</span>
+                </a>
+            </div>
+
+            <div class="projet">
+                <a href="https://ammar-khaoula.github.io/front_end/">
+                    <div class="pictures">
+                        <img src="pictures/camera.jpg" alt="vente camera">
+                    </div>
+                    <span>orinoco</span>
+                    <span class="date_project">18/07/2021</span>
+                </a>
+            </div>
+
+            <div class="projet">
+                <a href="https://github.com/Ammar-Khaoula/-p7reseauSocial.git">
+                    <div class="pictures">
+                        <img src="pictures/reseau_social.png" alt="reseau_social">
+                    </div>
+                    <span>Reseau Social</span>
+                    <span class="date_project">18/10/2021</span>
+                </a>
+            </div>
+
+            <div class="projet">
+                <a href="https://ammar-khaoula.github.io/jeuxEnfant_01_22/">
+                    <div class="pictures">
+                        <img src="pictures/memoire.jpg" alt="jeux de memoire">
+                    </div>
+                    <span>jeux mémoire</span>
+                    <span class="date_project">01/01/2022</span>
+                </a>
+
+            </div>
+
+            <div class="projet">
+                <a href="https://ammar-khaoula.github.io/APIMeteo/">
+                    <div class="pictures">
+                        <img src="pictures/arriere_plan.jpg" alt="meteo">
+                    </div>
+                    <span>API meteo</span>
+                    <span class="date_project">01/02/2022</span>
+                </a>
+            </div>
+
+            <div class="projet">
+                <a href="https://ammar-khaoula.github.io/sale-de-sport/">
+                    <div class="pictures">
+                        <img src="pictures/2.jpg" alt="salle de sport">
+                    </div>
+                    <span>salle de sport</span>
+                    <span class="date_project">10/02/2022</span>
+                </a>
+            </div>
+
+            <div class="projet">
+                <a href="https://ammar-khaoula.github.io/e-commerce/">
+                    <div class="pictures">
+                        <img src="pictures/vetement1.jpg" alt="e-commerce">
+                    </div>
+                    <span>e-Commerce</span>
+                    <span class="date_project">01/03/2022</span>
+                </a>
+            </div>
+
         </div>
-
-        <div class="projet">
-            <a href="https://ammar-khaoula.github.io/front_end/">
-                <div class="pictures">
-                    <img src="pictures/camera.jpg" alt="vente camera">
-                </div>
-                <span>orinoco</span>
-                <span class="date_project">18/07/2021</span>
-            </a>
+    </section>
+    <section class="blocSpan" id="contacts">
+        <ul>
+            <li>C</li>
+            <li>o</li>
+            <li>n</li>
+            <li>t</li>
+            <li>a</li>
+            <li>c</li>
+            <li>t</li>
+        </ul>
+        <div class="contacts">
+            <div class="contact" id="mail">
+                <a href='mailto:khaoulabha1991@gmail.com'><i class="fas fa-envelope-square"></i></a>
+            </div>
+            <div class="contact" id="telephone">
+                <i class="fas fa-phone-square-alt"></i>
+                <span>07 68 83 67 05</span>
+            </div>
+            <div class="contact" id="linkedin">
+                <a href="https://www.linkedin.com/in/khaoula-ammar/"><i class="fab fa-linkedin"></i></a>
+            </div>
         </div>
+    </section>
+    <!--footer-->
 
-        <div class="projet">
-            <a href="https://github.com/Ammar-Khaoula/-p7reseauSocial.git">
-                <div class="pictures">
-                    <img src="pictures/reseau_social.png" alt="reseau_social">
-                </div>
-                <span>Reseau Social</span>
-                <span class="date_project">18/10/2021</span>
-            </a>
-        </div>
-
-        <div class="projet">
-            <a href="https://ammar-khaoula.github.io/jeuxEnfant_01_22/">
-                <div class="pictures">
-                    <img src="pictures/memoire.jpg" alt="jeux de memoire">
-                </div>
-                <span>jeux mémoire</span>
-                <span class="date_project">01/01/2022</span>
-            </a>
-
-        </div>
-
-        <div class="projet">
-            <a href="https://ammar-khaoula.github.io/APIMeteo/">
-                <div class="pictures">
-                    <img src="pictures/arriere_plan.jpg" alt="meteo">
-                </div>
-                <span>API meteo</span>
-                <span class="date_project">01/02/2022</span>
-            </a>
-        </div>
-
-        <div class="projet">
-            <a href="https://ammar-khaoula.github.io/sale-de-sport/">
-                <div class="pictures">
-                    <img src="pictures/2.jpg" alt="salle de sport">
-                </div>
-                <span>salle de sport</span>
-                <span class="date_project">10/02/2022</span>
-            </a>
-        </div>
-
-        <div class="projet">
-            <a href="https://ammar-khaoula.github.io/e-commerce/">
-                <div class="pictures">
-                    <img src="pictures/vetement1.jpg" alt="e-commerce">
-                </div>
-                <span>e-Commerce</span>
-                <span class="date_project">01/03/2022</span>
-            </a>
-        </div>
-
-    </div>
-</section>
-<section class="blocSpan" id="contacts">
-    <ul>
-        <li>C</li>
-        <li>o</li>
-        <li>n</li>
-        <li>t</li>
-        <li>a</li>
-        <li>c</li>
-        <li>t</li>
-    </ul>
-    <div class="contacts">
-       <div class="contact" id="mail">
-        <a href='mailto:khaoulabha1991@gmail.com'><i class="fas fa-envelope-square"></i></a>
-       </div>
-       <div class="contact" id="telephone">
-        <i class="fas fa-phone-square-alt"></i>
-        <span>07 68 83 67 05</span>
-       </div>
-       <div class="contact" id="linkedin">
-        <a href="https://www.linkedin.com/in/khaoula-ammar/"><i class="fab fa-linkedin"></i></a>
-       </div>
-    </div>
-</section>
-<!--footer-->
-
-<footer>
-    <p> 2022&copy;Ammar Khaoula</p>
-</footer>
+    <footer>
+        <p> 2022&copy;Ammar Khaoula</p>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js"></script>
     <script src="app.js"></script>
 </body>
+
 </html>
