edit Css and add projects

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header id="header">
         <div>
-            <img class="imageProfil" src="pictures/monImage.jpg" alt="image de profil">
+            <img class="imageProfil" src="pictures/monImage1.png" alt="image de profil">
         </div>
         <div>
             <h1> Ammar Khaoula</h1>
@@ -30,7 +30,7 @@
         </div>
     </nav>
 
-    <section>
+    <!-- <section>
         <h3>Bienvenue</h3>
         <p class="presentation" id="paragraphe1">
             Après mon bac spécialité mathématique en 2011. <br> Je suis entré à l’école infirmière. J’ai mon diplôme en 2014, après je travaille comme bénévole au service d’urgence de 2014 jusqu’à 2017.<br> Suite à un regroupement familial j’arrive aux
@@ -43,106 +43,142 @@
             pour la partie front-end...<br>
 
         </p>
+        </section>-->
+    <section>
+        <h3>Bienvenue</h3>
+        <div class="info ">
+            <p>Depuis 2020, je suis passionnée par les nouvelles technologies numériques et <br>le développement web. Grâce à ma formation et à mes projets,<br> j’ai pu acquérir des compétences solides qui me permettent de concevoir des sites et
+                <br>des applications modernes. Je travaille avec des outils comme : </p>
+            <br/><span class="long"></span>
+        </div>
     </section>
+
     <!--projet-->
-    <section id="projects">
+    <section id="projects ">
         <h3>Mes Projets</h3>
-        <div id="mesProjts">
+        <div id="mesProjts ">
 
             <div class="projet">
-                <a href="https://ammar-khaoula.github.io/reservia.githup.io/">
-                    <div class="pictures">
-                        <img src="pictures/Avion (2).jpg" alt="Reservia">
+                <a href="https://ammar-khaoula.github.io/reservia.githup.io/ ">
+                    <div class="pictures ">
+                        <img src="pictures/Avion (2).jpg " alt="Reservia ">
                     </div>
                     <span>reservia</span>
-                    <span class="date_project">21/03/2021</span>
+                    <span class="date_project ">21/03/2021</span>
                 </a>
             </div>
 
-            <div class="projet">
-                <a href="https://ammar-khaoula.github.io/AmmarKhaoula_3_21032021.githup.io/">
-                    <div class="pictures">
-                        <img src="pictures/food.jpg" alt="food">
+            <div class="projet ">
+                <a href="https://ammar-khaoula.github.io/AmmarKhaoula_3_21032021.githup.io/ ">
+                    <div class="pictures ">
+                        <img src="pictures/food.jpg " alt="food ">
                     </div>
                     <span>ohmyfood</span>
-                    <span class="date_project">26/04/2021</span>
+                    <span class="date_project ">26/04/2021</span>
                 </a>
             </div>
 
-            <div class="projet">
-                <a href="https://ammar-khaoula.github.io/chouette_entreprise_webdesign_Lyon/">
-                    <div class="pictures">
-                        <img src="pictures/seo.png" alt="seo">
+            <div class="projet ">
+                <a href="https://ammar-khaoula.github.io/chouette_entreprise_webdesign_Lyon/ ">
+                    <div class="pictures ">
+                        <img src="pictures/seo.png " alt="seo ">
                     </div>
                     <span>La chouette agence</span>
-                    <span class="date_project">17/05/2021</span>
+                    <span class="date_project ">17/05/2021</span>
                 </a>
             </div>
 
-            <div class="projet">
-                <a href="https://ammar-khaoula.github.io/front_end/">
-                    <div class="pictures">
-                        <img src="pictures/camera.jpg" alt="vente camera">
+            <div class="projet ">
+                <a href="https://ammar-khaoula.github.io/front_end/ ">
+                    <div class="pictures ">
+                        <img src="pictures/camera.jpg " alt="vente camera ">
                     </div>
                     <span>orinoco</span>
-                    <span class="date_project">18/07/2021</span>
+                    <span class="date_project ">18/07/2021</span>
                 </a>
             </div>
 
-            <div class="projet">
-                <a href="https://github.com/Ammar-Khaoula/-p7reseauSocial.git">
-                    <div class="pictures">
-                        <img src="pictures/reseau_social.png" alt="reseau_social">
+            <div class="projet ">
+                <a href="https://github.com/Ammar-Khaoula/-p7reseauSocial.git ">
+                    <div class="pictures ">
+                        <img src="pictures/reseau_social.png " alt="reseau_social ">
                     </div>
                     <span>Reseau Social</span>
-                    <span class="date_project">18/10/2021</span>
+                    <span class="date_project ">18/10/2021</span>
                 </a>
             </div>
 
-            <div class="projet">
-                <a href="https://ammar-khaoula.github.io/jeuxEnfant_01_22/">
-                    <div class="pictures">
-                        <img src="pictures/memoire.jpg" alt="jeux de memoire">
+            <div class="projet ">
+                <a href="https://ammar-khaoula.github.io/jeuxEnfant_01_22/ ">
+                    <div class="pictures ">
+                        <img src="pictures/memoire.jpg " alt="jeux de memoire ">
                     </div>
                     <span>jeux mémoire</span>
-                    <span class="date_project">01/01/2022</span>
+                    <span class="date_project ">01/01/2022</span>
                 </a>
 
             </div>
 
-            <div class="projet">
-                <a href="https://ammar-khaoula.github.io/APIMeteo/">
-                    <div class="pictures">
-                        <img src="pictures/arriere_plan.jpg" alt="meteo">
+            <div class="projet ">
+                <a href="https://ammar-khaoula.github.io/APIMeteo/ ">
+                    <div class="pictures ">
+                        <img src="pictures/arriere_plan.jpg " alt="meteo ">
                     </div>
                     <span>API meteo</span>
-                    <span class="date_project">01/02/2022</span>
+                    <span class="date_project ">01/02/2022</span>
                 </a>
             </div>
 
-            <div class="projet">
-                <a href="https://ammar-khaoula.github.io/sale-de-sport/">
-                    <div class="pictures">
-                        <img src="pictures/2.jpg" alt="salle de sport">
+            <div class="projet ">
+                <a href="https://ammar-khaoula.github.io/sale-de-sport/ ">
+                    <div class="pictures ">
+                        <img src="pictures/2.jpg " alt="salle de sport ">
                     </div>
                     <span>salle de sport</span>
-                    <span class="date_project">10/02/2022</span>
+                    <span class="date_project ">10/02/2022</span>
                 </a>
             </div>
 
-            <div class="projet">
-                <a href="https://ammar-khaoula.github.io/e-commerce/">
-                    <div class="pictures">
-                        <img src="pictures/vetement1.jpg" alt="e-commerce">
+            <div class="projet ">
+                <a href="https://ammar-khaoula.github.io/e-commerce/ ">
+                    <div class="pictures ">
+                        <img src="pictures/vetement1.jpg " alt="e-commerce ">
                     </div>
                     <span>e-Commerce</span>
-                    <span class="date_project">01/03/2022</span>
+                    <span class="date_project ">01/03/2022</span>
+                </a>
+            </div>
+            <div class="projet ">
+                <a href="https://ammar-khaoula.github.io/Equipement-Pour-Industrie/ ">
+                    <div class="pictures ">
+                        <img src="pictures/industrie1.jpg" alt="Industrie">
+                    </div>
+                    <span>Equipement Pour Industrie</span>
+                    <span class="date_project ">31/03/2022</span>
+                </a>
+            </div>
+            <div class="projet ">
+                <a href="https://ammar-khaoula.github.io/AvocatCherif/">
+                    <div class="pictures ">
+                        <img src="pictures/Avocat.jpg" alt="Avocat">
+                    </div>
+                    <span>Avocat</span>
+                    <span class="date_project ">01/01/2023</span>
+                </a>
+            </div>
+            <div class="projet ">
+                <a href="https://ammar-khaoula.github.io/peitureKamel/">
+                    <div class="pictures ">
+                        <img src="pictures/peinture.jpg" alt="batiment">
+                    </div>
+                    <span>Bâtiment</span>
+                    <span class="date_project ">31/01/2023</span>
                 </a>
             </div>
 
         </div>
     </section>
-    <section class="blocSpan" id="contacts">
+    <section class="blocSpan " id="contacts ">
         <ul>
             <li>C</li>
             <li>o</li>
@@ -153,25 +189,26 @@
             <li>t</li>
         </ul>
         <div class="contacts">
-            <div class="contact" id="mail">
-                <a href='mailto:khaoulabha1991@gmail.com'><i class="fas fa-envelope-square"></i></a>
+            <div class="contact " id="mail ">
+                <a href='mailto:khaoulabha1991@gmail.com '><i class="fas fa-envelope-square "></i></a>
             </div>
-            <div class="contact" id="telephone">
-                <i class="fas fa-phone-square-alt"></i>
-                <span>07 68 83 67 05</span>
+            <div class="contact " id="telephone">
+                <i class="fas fa-phone-square-alt "></i>
+                <p>07 68 83 67 05</p>
             </div>
-            <div class="contact" id="linkedin">
-                <a href="https://www.linkedin.com/in/khaoula-ammar/"><i class="fab fa-linkedin"></i></a>
+            <div class="contact " id="linkedin">
+                <a href="https://www.linkedin.com/in/khaoula-ammar/ "><i class="fab fa-linkedin "></i></a>
             </div>
         </div>
     </section>
     <!--footer-->
 
     <footer>
-        <p> 2022&copy;Ammar Khaoula</p>
+        <p> 2024&copy;Ammar Khaoula</p>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js"></script>
-    <script src="app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js "></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js "></script>
+    <script src="app.js "></script>
 </body>
 
 </html>
