--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Création de sites vétérinaires, blogs, portfolios, sites sur mesure en PHP Symfony et Vue.js, ainsi que conception de logos et flyers professionnels.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfeliot AMMAR KHAOULA</title>
+    <title>Portfolio AMMAR KHAOULA - Développeuse Wordpress - PHP/Symfony - Vue.Js </title>
     <link rel='stylesheet' href='style.css'>
     <link rel="stylesheet" type="text/css" href="ecran_tablette.css" media="all and (min-width:769px) and (max-width:991px)">
     <link rel="stylesheet" type="text/css" href="petite_ecran.css" media="all and (max-width:768px)">
     <script src="https://kit.fontawesome.com/613a25ab47.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -30,20 +32,6 @@
         </div>
     </nav>
 
-    <!-- <section>
-        <h3>Bienvenue</h3>
-        <p class="presentation" id="paragraphe1">
-            Après mon bac spécialité mathématique en 2011. <br> Je suis entré à l’école infirmière. J’ai mon diplôme en 2014, après je travaille comme bénévole au service d’urgence de 2014 jusqu’à 2017.<br> Suite à un regroupement familial j’arrive aux
-            France ou notre diplôme n’est pas reconnu. <br>En 2019 je déposais mon dossier au parcoursUp et J’entrer à l’école infirmière aux France pour refaire les 3 ans d’études mais suite à des engagements familiaux privés j’ai arrêté l’école.<br>            Comme je suis passionnée par la communication, les nouvelles technologies et par le web.<br> En 2020 J’ai fait une petite formation de 2 mois chez <span>«KONEXIO»</span> pour connaitre la base de HTML/CSS et Javascript.
-            <br>En 2021 j’ai fait Formation de développeuse web chez <span>«OpenClassroom»</span> (RNCP niveau v)...<br>
-        </p>
-        <p class="presentation">
-            Au durent de formation j’ai fait six projets ou j’ai utilisé plusieurs langages informatiques :<br> -HTML5 : structure de page.<br> -CSS3 : mise en forme.<br> -Bootstrap : site responsive.<br> -Javascript : comportement de page.<br> -OWASP
-            : sécuriser l’application. <br> -Git : gestion de versions et déployer le projet.<br> -API rest. <br> -MongoDB/MYSQL : base de données. <br> -Node Js : environnement d’exécution pour Javascript. <br> -Vue Js: est un framework Javascript, utilisé
-            pour la partie front-end...<br>
-
-        </p>
-        </section>-->
     <section>
         <h3>Bienvenue</h3>
         <div class="info ">
@@ -64,7 +52,7 @@
                         <img src="pictures/Avion (2).jpg " alt="Reservia ">
                     </div>
                     <span>reservia</span>
-                    <span class="date_project ">21/03/2021</span>
+                    <small class="date_project ">21/03/2021</small>
                 </a>
             </div>
 
@@ -74,7 +62,7 @@
                         <img src="pictures/food.jpg " alt="food ">
                     </div>
                     <span>ohmyfood</span>
-                    <span class="date_project ">26/04/2021</span>
+                    <small class="date_project ">26/04/2021</small>
                 </a>
             </div>
 
@@ -84,7 +72,7 @@
                         <img src="pictures/seo.png " alt="seo ">
                     </div>
                     <span>La chouette agence</span>
-                    <span class="date_project ">17/05/2021</span>
+                    <small class="date_project ">17/05/2021</small>
                 </a>
             </div>
 
@@ -94,7 +82,7 @@
                         <img src="pictures/camera.jpg " alt="vente camera ">
                     </div>
                     <span>orinoco</span>
-                    <span class="date_project ">18/07/2021</span>
+                    <small class="date_project ">18/07/2021</small>
                 </a>
             </div>
 
@@ -104,7 +92,7 @@
                         <img src="pictures/reseau_social.png " alt="reseau_social ">
                     </div>
                     <span>Reseau Social</span>
-                    <span class="date_project ">18/10/2021</span>
+                    <small class="date_project ">18/10/2021</small>
                 </a>
             </div>
 
@@ -114,7 +102,7 @@
                         <img src="pictures/memoire.jpg " alt="jeux de memoire ">
                     </div>
                     <span>jeux mémoire</span>
-                    <span class="date_project ">01/01/2022</span>
+                    <small class="date_project ">01/01/2022</small>
                 </a>
 
             </div>
@@ -125,7 +113,7 @@
                         <img src="pictures/arriere_plan.jpg " alt="meteo ">
                     </div>
                     <span>API meteo</span>
-                    <span class="date_project ">01/02/2022</span>
+                    <small class="date_project ">01/02/2022</small>
                 </a>
             </div>
 
@@ -135,7 +123,7 @@
                         <img src="pictures/2.jpg " alt="salle de sport ">
                     </div>
                     <span>salle de sport</span>
-                    <span class="date_project ">10/02/2022</span>
+                    <small class="date_project ">10/02/2022</small>
                 </a>
             </div>
 
@@ -145,7 +133,7 @@
                         <img src="pictures/vetement1.jpg " alt="e-commerce ">
                     </div>
                     <span>e-Commerce</span>
-                    <span class="date_project ">01/03/2022</span>
+                    <small class="date_project ">01/03/2022</small>
                 </a>
             </div>
             <div class="projet ">
@@ -154,7 +142,7 @@
                         <img src="pictures/industrie1.jpg" alt="Industrie">
                     </div>
                     <span>Equipement Pour Industrie</span>
-                    <span class="date_project ">31/03/2022</span>
+                    <small class="date_project ">31/03/2022</small>
                 </a>
             </div>
             <div class="projet ">
@@ -163,7 +151,7 @@
                         <img src="pictures/Avocat.jpg" alt="Avocat">
                     </div>
                     <span>Avocat</span>
-                    <span class="date_project ">01/01/2023</span>
+                    <small class="date_project ">01/01/2023</small>
                 </a>
             </div>
             <div class="projet ">
@@ -172,7 +160,37 @@
                         <img src="pictures/peinture.jpg" alt="batiment">
                     </div>
                     <span>Bâtiment</span>
-                    <span class="date_project ">31/01/2023</span>
+                    <small class="date_project ">31/01/2023</small>
+                </a>
+            </div>
+            <div class="projet">
+                <a href="https://agence-immobiliere.ammarkhaoula.com/">
+                    <div class="pictures ">
+                        <img src="pictures/1.png" alt="agence-immobiliere">
+                    </div>
+                    <span>agence immobiliere</span>
+                    <small>"Wordpress"</small></br>
+                    <small class="date_project ">31/04/2023</small>
+                </a>
+            </div>
+            <div class="projet">
+
+                <div class="pictures ">
+                    <img src="pictures/img.png" alt="agence-immobiliere">
+                </div>
+                <span>cahier des charges</span>
+                <small class="date_project ">31/05/2023</small>
+                </a>
+            </div>
+
+            <div class="projet">
+                <div class="slider">
+                    <img id="slider-img" src="pictures/img.png" alt="Photo Slider">
+                    <button id="prev"> ❮ </button>
+                    <button id="next"> ❯ </button>
+                </div>
+                <span>cahier des charges</span>
+                <small class="date_project ">31/05/2023</small>
                 </a>
             </div>
 
